--- a/com.microservice.demo/logstash-kibana.yml
+++ b/com.microservice.demo/logstash-kibana.yml
@@ -4,10 +4,10 @@ services:
     image: docker.elastic.co/kibana/kibana:${ELASTIC_VERSION}
     ports:
       - 5601:5601
-    depends_on:
-      - elastic-1
-      - elastic-2
-      - elastic-3
+#    depends_on:
+#      - elastic-1
+#      - elastic-2
+#      - elastic-3
     environment:
       ELASTICSEARCH_HOSTS: http://elastic-1:9200
     networks:
