--- a/com.microservice.demo/keycloak_authorization_server.yml
+++ b/com.microservice.demo/keycloak_authorization_server.yml
@@ -12,8 +12,8 @@ services:
       - "KC_DB=postgres"
       - "KC_DB_URL=jdbc:postgresql://postgres/keycloak"
       - "KC_DB_URL_PORT=5433"
-      - "KC_DB_USERNAME=keycloak"
-      - "KC_DB_PASSWORD=keycloak"
+      - "KC_DB_USERNAME=awlabs"
+      - "KC_DB_PASSWORD=awlabspw"
       - "PROXY_ADDRESS_FORWARDING=true"
     command: "start-dev"
     depends_on:
