--- a/com.microservice.demo/keycloak_authorization_server.yml
+++ b/com.microservice.demo/keycloak_authorization_server.yml
@@ -7,13 +7,13 @@ services:
     hostname: keycloak
     restart: always
     environment:
-      - "KEYCLOAK_ADMIN=admin"
-      - "KEYCLOAK_ADMIN_PASSWORD=admin"
+      - "KEYCLOAK_ADMIN=awlabs"
+      - "KEYCLOAK_ADMIN_PASSWORD=awlabspw"
       - "KC_DB=postgres"
       - "KC_DB_URL=jdbc:postgresql://postgres/keycloak"
       - "KC_DB_URL_PORT=5433"
-      - "KC_DB_USERNAME=awlabs"
-      - "KC_DB_PASSWORD=awlabspw"
+      - "KC_DB_USERNAME=keycloak"
+      - "KC_DB_PASSWORD=keycloak"
       - "PROXY_ADDRESS_FORWARDING=true"
     command: "start-dev"
     depends_on:
