--- a/com.microservice.demo/postgres.yml
+++ b/com.microservice.demo/postgres.yml
@@ -4,9 +4,9 @@ services:
     image: postgres:15.1
     restart: always
     environment:
-      - "POSTGRES_USER=keycloak"
-      - "POSTGRES_PASSWORD=keycloak"
-      - "POSTGRES_DB=keycloak"
+      - "POSTGRES_USER=pgMaster"
+      - "POSTGRES_PASSWORD=pgMasterPw"
+      - "POSTGRES_DB=postgres"
     user: root
     ports:
       - "5432:5432"
