postgres.yml changes

--- a/com.microservice.demo/elastic_cluster.yml
+++ b/com.microservice.demo/elastic_cluster.yml
@@ -6,8 +6,8 @@ services:
     environment:
       - node.name=elastic-1
       - cluster.name=es-twitter-cluster
-      - discovery.seed_hosts=elastic-2,elastic-3
-      - cluster.initial_master_nodes=elastic-1,elastic-2,elastic-3
+      - discovery.seed_hosts=elastic-2
+      - cluster.initial_master_nodes=elastic-1,elastic-2
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ulimits:
@@ -25,8 +25,8 @@ services:
     environment:
       - node.name=elastic-2
       - cluster.name=es-twitter-cluster
-      - discovery.seed_hosts=elastic-1,elastic-3
-      - cluster.initial_master_nodes=elastic-1,elastic-2,elastic-3
+      - discovery.seed_hosts=elastic-1
+      - cluster.initial_master_nodes=elastic-1,elastic-2
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ulimits:
@@ -37,23 +37,6 @@ services:
       - ./volumes/elastic-cluster/data02_7_17_4:/usr/share/elasticsearch/data
     networks:
       - ${GLOBAL_NETWORK:-elastic}
-  elastic-3:
-    image: docker.elastic.co/elasticsearch/elasticsearch:${ELASTIC_VERSION}
-    environment:
-      - node.name=elastic-3
-      - cluster.name=es-twitter-cluster
-      - discovery.seed_hosts=elastic-1,elastic-2
-      - cluster.initial_master_nodes=elastic-1,elastic-2,elastic-3
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    volumes:
-      - ./volumes/elastic-cluster/data03_7_17_4:/usr/share/elasticsearch/data
-    networks:
-      - ${GLOBAL_NETWORK:-elastic}
   logstash:
     image: docker.elastic.co/logstash/logstash:${ELASTIC_VERSION}
     command: logstash -f /etc/logstash/conf.d/logback.conf
@@ -62,7 +45,6 @@ services:
     depends_on:
       - elastic-1
       - elastic-2
-      - elastic-3
     volumes:
       - ./config/logback.conf:/etc/logstash/conf.d/logback.conf
       - ./volumes/elastic-cluster/docker-logs/logstash:/logs
@@ -72,12 +54,21 @@ services:
       XPACK_MONITORING_ELASTICSEARCH_HOSTS: http://elastic-1:9200
     networks:
       - ${GLOBAL_NETWORK:-elastic}
+  kibana:
+    image: docker.elastic.co/kibana/kibana:${ELASTIC_VERSION}
+    ports:
+      - 5601:5601
+    depends_on:
+      - elastic-1
+      - elastic-2
+    environment:
+      ELASTICSEARCH_HOSTS: http://elastic-1:9200
+    networks:
+      - ${GLOBAL_NETWORK:-elastic}
 
 
 volumes:
   data01_7_17_4:
     driver: local
   data02_7_17_4:
-    driver: local
-  data03_7_17_4:
     driver: local
