--- a/com.microservice.demo/elastic_cluster.yml
+++ b/com.microservice.demo/elastic_cluster.yml
@@ -55,7 +55,7 @@ services:
     networks:
       - ${GLOBAL_NETWORK:-elastic}
   kibana:
-    image: docker.elastic.co/kibana/kibana:${ELASTIC_VERSION}
+    image: docker.elastic.co/kibana/kibana:7.9.1
     ports:
       - 5601:5601
     depends_on:
