--- a/book-hive/keycloak_authorization_server.yml
+++ b/book-hive/keycloak_authorization_server.yml
@@ -15,7 +15,7 @@ services:
       - "KC_DB_USERNAME=keycloak"
       - "KC_DB_PASSWORD=keycloak"
       - "PROXY_ADDRESS_FORWARDING=true"
-    command: "start-dev"
+    command: "start-dev --http-enabled=true"
     depends_on:
       - postgres
     networks:
